--- a/.github/workflows/Windows_c-cpp.yml
+++ b/.github/workflows/Windows_c-cpp.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: build
-      run: gcc hello.c -o hello.exe
+      run: gcc foodordering.c -o foodordering.exe
     - name: run
-      run: .\hello.exe
+      run: .\foodordering.exe
