--- a/.github/workflows/Linux_c-cpp.yml
+++ b/.github/workflows/Linux_c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: build
-      run: gcc foodordering.c -o foodordering.exe
+      run: gcc FoodOrdering.c -o FoodOrdering.exe
     - name: run
-      run: ./foodordering.exe
+      run: ./FoodOrdering.exe
 
