--- a/.github/workflows/Windows_c-cpp.yml
+++ b/.github/workflows/Windows_c-cpp.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: build
-      run: gcc foodordering.c -o foodordering.exe
+      run: gcc FoodOrdering.c -o FoodOrdering.exe
     - name: run
-      run: .\foodordering.exe
+      run: .\FoodOrdering.exe
